--- a/src/components/file2/index.css
+++ b/src/components/file2/index.css
@@ -1,6 +1,6 @@
 .wel {
   background-color: #31aeb5;
-  height: 50vh;
+  height: 60vh;
   margin: 10px;
   min-width: 300px;
   padding: 10px;
@@ -22,8 +22,10 @@
 .para {
   color: white;
   font-size: 20px;
-  width: 250px;
+  width: 280px;
   margin: 20px;
+  padding: 5px;
+  margin-bottom: 5px;
 }
 
 @media screen and (min-width: 776px) {
