--- a/src/components/file3/index.css
+++ b/src/components/file3/index.css
@@ -19,6 +19,7 @@
   width: 85px;
   height: 35px;
   border-radius: 5px;
+  cursor: pointer;
 }
 .Emp {
   background-color: rgb(236, 120, 120);
@@ -149,7 +150,7 @@
   .button {
     background-color: blue;
     color: white;
-
+    cursor: pointer;
     height: 35px;
     border-radius: 5px;
   }
